--- a/main.html
+++ b/main.html
@@ -296,6 +296,7 @@
                     setTimeout(blocageTouche, 200);
                     player.setVelocityY(-pDeplacementY);
                     player.setVelocityX(-50);
+                    setTimeout(cdDJ, 500);
                 }
             }
 
@@ -307,6 +308,7 @@
                     setTimeout(blocageTouche, 200);
                     player.setVelocityY(-pDeplacementY);
                     player.setVelocityX(50);
+                    setTimeout(cdDJ, 500);
                 }
             }
 
